Issue #23181: More "codepoint" -> "code point".